crud with don't show user detail

--- a/src/index.css
+++ b/src/index.css
@@ -100,4 +100,7 @@ body {
 /* login button hover effect ========================================== end  */
 
 
-
+.btn{
+  width: 80px;
+  margin: 0 8PX;
+}
